--- a/index.html
+++ b/index.html
@@ -85,11 +85,14 @@
     <section id="home" class="hero">
         <!-- Background Video -->
         <div class="video-background">
-            <video autoplay muted loop playsinline>
-                <source src="_title_run_202510141750.mp4" type="video/mp4">
+            <video id="heroVideo" autoplay muted loop playsinline preload="metadata" 
+                   poster="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1200 800'%3E%3Crect width='100%25' height='100%25' fill='%232563eb'/%3E%3C/svg%3E">
+                <source src="assets/videos/hero-video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-overlay"></div>
+            <!-- Fallback background image -->
+            <div class="video-fallback" style="background: linear-gradient(135deg, rgba(37, 99, 235, 0.8) 0%, rgba(59, 130, 246, 0.6) 50%, rgba(147, 197, 253, 0.4) 100%); background-size: cover; background-position: center; position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -2;"></div>
         </div>
         <div class="hero-container">
             <div class="hero-content">
