--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H2GO - Supplementation Intelligence for Amateur Runners</title>
+    <title>H2GO - Supplementation Intelligence for Amateur Runners v2.0</title>
     
     <!-- PWA Meta Tags -->
     <meta name="description" content="AI-powered supplement recommendations for amateur runners. Get personalized supplement plans based on your running profile.">
