--- a/index.html
+++ b/index.html
@@ -159,11 +159,7 @@
                             </div>
                         </div>
                         <div class="chat-messages" id="chatMessages">
-                            <div class="message bot-message">
-                                <div class="message-content">
-                                    <p data-i18n="chat_greeting">Hi! I'm your H2GO assistant. I'll help you create a personalized supplement plan for your running journey. Let's start with some basic information about you.</p>
-                                </div>
-                            </div>
+                            <!-- Chat messages will be dynamically added here -->
                         </div>
                         <div class="chat-input-container">
                             <input type="text" id="chatInput" data-i18n="quest_placeholder" placeholder="Type your answer here..." disabled>
